--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "author": "@agctyz",
   "license": "MIT",
   "version": "1.0.0",
+  "resolutions": {
+    "webpack": "^5.0.0-beta.30"
+  },
   "scripts": {
     "prepare": "husky install",
     "dev": "next dev",
@@ -12,7 +15,8 @@
     "format": "prettier --write .",
     "lint": "eslint src --fix",
     "test": "jest",
-    "test-all": "yarn lint && yarn type-check && yarn test"
+    "test-all": "yarn lint && yarn type-check && yarn test",
+    "generate-types": "contentful-typescript-codegen --output ./src/types/generated/contentful.d.ts"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
@@ -21,25 +25,38 @@
     ]
   },
   "dependencies": {
+    "@contentful/rich-text-types": "^14.1.2",
+    "@reduxjs/toolkit": "^1.5.1",
+    "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
+    "contentful": "^8.3.6",
+    "contentful-management": "^7.22.2",
+    "dotenv": "^10.0.0",
+    "gsap": "npm:@gsap/shockingly",
+    "lodash.debounce": "^4.0.8",
     "next": "10.2.0",
+    "next-transpile-modules": "^7.2.0",
     "postcss": "^8.2.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "sass": "^1.32.12",
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.23",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "babel-jest": "^26.6.3",
+    "contentful-typescript-codegen": "^3.2.2",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
