--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,7 +75,7 @@
           }
         ],
         "pathGroupsExcludedImportTypes": ["react"],
-        "newlines-between": "always",
+        "newlines-between": "always-and-inside-groups",
         "alphabetize": {
           "order": "asc",
           "caseInsensitive": true
