--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "contentful": "^8.3.6",
     "contentful-management": "^7.22.2",
@@ -38,11 +39,13 @@
     "gsap": "npm:@gsap/shockingly",
     "lodash.debounce": "^4.0.8",
     "next": "10.2.0",
+    "next-redux-wrapper": "^7.0.0",
     "next-transpile-modules": "^7.2.0",
     "postcss": "^8.2.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "sass": "^1.32.12",
     "tailwindcss": "^2.1.2"
   },
