--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier", "unused-imports"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier",
+    "unused-imports"
+  ],
   "extends": [
     "airbnb",
     "airbnb/hooks",
@@ -31,7 +35,15 @@
     "unused-imports/no-unused-imports": "error",
     "prettier/prettier": "error",
     "@typescript-eslint/explicit-module-boundary-types": 0,
-    "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".ts",
+          ".tsx"
+        ]
+      }
+    ],
     "react/jsx-props-no-spreading": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "react/react-in-jsx-scope": 0,
@@ -47,7 +59,13 @@
     "@typescript-eslint/no-var-requires": 0,
     "no-use-before-define": 0,
     //    "@typescript-eslint/no-use-before-define": 0,
-    "import/extensions": ["error", "never", { "svg": "always" }],
+    "import/extensions": [
+      "error",
+      "never",
+      {
+        "svg": "always"
+      }
+    ],
     "react/no-unescaped-entities": 0,
     "jsx-a11y/label-has-associated-control": 0,
     "react/no-unused-prop-types": 0,
@@ -60,13 +78,20 @@
     "no-console": [
       2,
       {
-        "allow": ["warn", "error"]
+        "allow": [
+          "warn",
+          "error"
+        ]
       }
     ],
     "import/order": [
       "error",
       {
-        "groups": ["builtin", "external", "internal"],
+        "groups": [
+          "builtin",
+          "external",
+          "internal"
+        ],
         "pathGroups": [
           {
             "pattern": "react",
@@ -74,7 +99,9 @@
             "position": "before"
           }
         ],
-        "pathGroupsExcludedImportTypes": ["react"],
+        "pathGroupsExcludedImportTypes": [
+          "react"
+        ],
         "newlines-between": "always-and-inside-groups",
         "alphabetize": {
           "order": "asc",
