--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,18 @@
 {
-  "presets": ["next/babel"],
+  "presets": [
+    "next/babel"
+  ],
   "plugins": [
     [
       "module-resolver",
       {
-        "root": ["./"],
+        "root": [
+          "./"
+        ],
         "alias": {
-          "@*": ["./src/*"]
+          "@*": [
+            "./src/*"
+          ]
         }
       }
     ]
