--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-svg": "^14.0.0",
     "redux": "^4.1.0",
     "sass": "^1.32.12",
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.14.5",
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.23",
     "@types/lodash.debounce": "^4.0.6",
@@ -59,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "babel-jest": "^26.6.3",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "contentful-typescript-codegen": "^3.2.2",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
