--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,12 @@
 {
-  "presets": [
-    "next/babel"
-  ],
+  "presets": ["next/babel"],
   "plugins": [
     [
       "module-resolver",
       {
-        "root": [
-          "./"
-        ],
+        "root": ["./"],
         "alias": {
-          "@*": [
-            "./src/*"
-          ]
+          "@*": ["./src/*"]
         }
       }
     ]
