--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-responsive": "^8.2.0",
     "react-svg": "^14.0.0",
     "redux": "^4.1.0",
     "sass": "^1.32.12",
@@ -58,6 +59,7 @@
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-redux": "^7.1.16",
+    "@types/react-responsive": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "babel-jest": "^26.6.3",
