--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "contentful": "^8.3.6",
     "contentful-management": "^7.22.2",
     "dotenv": "^10.0.0",
@@ -49,17 +50,21 @@
     "react-svg": "^14.0.0",
     "redux": "^4.1.0",
     "sass": "^1.32.12",
-    "tailwindcss": "^2.1.2"
+    "simplebar-react": "^2.3.5",
+    "tailwindcss": "^2.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
     "@testing-library/react": "^11.2.6",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/jest": "^26.0.23",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-redux": "^7.1.16",
     "@types/react-responsive": "^8.0.2",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "babel-jest": "^26.6.3",
