--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss": "^8.2.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.1",
     "react-redux": "^7.2.4",
     "react-responsive": "^8.2.0",
     "react-svg": "^14.0.0",
