--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "contentful": "^8.3.6",
     "contentful-management": "^7.22.2",
     "dotenv": "^10.0.0",
-    "gsap": "npm:@gsap/shockingly",
+    "gsap": "./gsap-bonus.tgz",
     "lodash.debounce": "^4.0.8",
     "next": "10.2.0",
     "next-redux-wrapper": "^7.0.0",
