--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-responsive": "^8.0.2",
     "@types/uuid": "^8.3.1",
