--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "dotenv": "^10.0.0",
     "gsap": "./gsap-bonus.tgz",
     "lodash.debounce": "^4.0.8",
-    "next": "10.2.0",
+    "next": "^11.1.2",
     "next-redux-wrapper": "^7.0.0",
     "next-transpile-modules": "^7.2.0",
     "postcss": "^8.2.14",
