--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "sass": "^1.32.12",
     "simplebar-react": "^2.3.5",
     "tailwindcss": "^2.1.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webpack": "^5.0.0-beta.30"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
