--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
+    "@next/eslint-plugin-next": "^11.1.2",
     "@testing-library/react": "^11.2.6",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/jest": "^26.0.23",
