--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.3.6",
     "@contentful/rich-text-types": "^14.1.2",
+    "@googlemaps/google-maps-services-js": "^3.1.16",
+    "@googlemaps/js-api-loader": "^1.12.3",
     "@reduxjs/toolkit": "^1.5.1",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "^0.3.2",
@@ -62,6 +64,7 @@
     "@next/eslint-plugin-next": "^11.1.2",
     "@testing-library/react": "^11.2.6",
     "@types/body-scroll-lock": "^3.1.0",
+    "@types/google-map-react": "^2.1.3",
     "@types/jest": "^26.0.23",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^15.0.2",
