--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "^11.1.2",
     "next-redux-wrapper": "^7.0.0",
+    "next-seo": "^4.28.1",
     "next-transpile-modules": "^7.2.0",
     "postcss": "^8.2.14",
     "react": "^17.0.2",
