--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "redux": "^4.1.0",
     "sass": "^1.32.12",
     "simplebar-react": "^2.3.5",
+    "swr": "^1.0.1",
     "tailwindcss": "^2.1.2",
     "uuid": "^8.3.2",
     "webpack": "^5.0.0-beta.30"
