--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.4.13",
     "@contentful/rich-text-react-renderer": "^15.3.6",
     "@contentful/rich-text-types": "^14.1.2",
     "@googlemaps/google-maps-services-js": "^3.1.16",
@@ -40,6 +41,7 @@
     "contentful": "^8.3.6",
     "contentful-management": "^7.22.2",
     "dotenv": "^10.0.0",
+    "graphql": "^15.6.0",
     "gsap": "./gsap-bonus.tgz",
     "lodash.debounce": "^4.0.8",
     "next": "^11.1.2",
