--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@testing-library/react": "^11.2.6",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/google-map-react": "^2.1.3",
+    "@types/gtag.js": "^0.0.7",
     "@types/jest": "^26.0.23",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^15.0.2",
