--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@next/eslint-plugin-next": "^11.1.2",
     "@testing-library/react": "^11.2.6",
     "@types/body-scroll-lock": "^3.1.0",
+    "@types/facebook-pixel": "^0.0.24",
     "@types/google-map-react": "^2.1.3",
     "@types/gtag.js": "^0.0.7",
     "@types/jest": "^26.0.23",
