--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graphql": "^15.6.0",
     "gsap": "./gsap-bonus.tgz",
     "lodash.debounce": "^4.0.8",
+    "lodash.deburr": "^4.1.0",
     "next": "^11.1.2",
     "next-redux-wrapper": "^7.0.0",
     "next-seo": "^4.28.1",
@@ -73,6 +74,7 @@
     "@types/gtag.js": "^0.0.7",
     "@types/jest": "^26.0.23",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.deburr": "^4.1.6",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.0",
