--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^10.0.0",
     "graphql": "^15.6.0",
     "gsap": "./gsap-bonus.tgz",
+    "lodash.chunk": "^4.2.0",
     "lodash.debounce": "^4.0.8",
     "lodash.deburr": "^4.1.0",
     "next": "^11.1.2",
@@ -73,6 +74,7 @@
     "@types/google-map-react": "^2.1.3",
     "@types/gtag.js": "^0.0.7",
     "@types/jest": "^26.0.23",
+    "@types/lodash.chunk": "^4.2.6",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.deburr": "^4.1.6",
     "@types/node": "^15.0.2",
