--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install",
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
@@ -104,6 +105,7 @@
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.3",
     "lint-staged": "^11.0.0",
+    "next-sitemap": "^1.6.192",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   }
