test sitemap on vercel

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "prepare": "husky install",
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "postbuild": "next-sitemap",
     "start": "next start",
     "type-check": "tsc --pretty --noEmit",
