added cache for apollo requests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -71,9 +71,9 @@
       }
     ],
     "no-console": [
-      1,
+      2,
       {
-        "allow": ["warn"]
+        "allow": ["warn", "error"]
       }
     ],
     "import/order": [
