--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@contentful/rich-text-types": "^14.1.2",
     "@googlemaps/google-maps-services-js": "^3.1.16",
     "@googlemaps/js-api-loader": "^1.12.3",
+    "@moxy/next-router-scroll": "^2.2.0",
     "@reduxjs/toolkit": "^1.5.1",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "^0.3.2",
@@ -80,6 +81,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.deburr": "^4.1.6",
     "@types/memory-cache": "^0.2.1",
+    "@types/moxy__next-router-scroll": "^2.2.1",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.0",
