--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "contentful": "^8.3.6",
     "contentful-management": "^7.22.2",
+    "cookies-next": "^2.0.3",
     "dotenv": "^10.0.0",
     "graphql": "^15.6.0",
     "gsap": "./gsap-bonus.tgz",
