--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-transpile-modules": "^7.2.0",
     "postcss": "^8.2.14",
     "react": "^17.0.2",
+    "react-device-detect": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.1",
     "react-redux": "^7.2.4",
