--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
+    "@types/lodash.throttle": "^4.1.6",
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -50,6 +51,7 @@
     "lodash.chunk": "^4.2.0",
     "lodash.debounce": "^4.0.8",
     "lodash.deburr": "^4.1.0",
+    "lodash.throttle": "^4.1.1",
     "memory-cache": "^0.2.0",
     "next": "^11.1.2",
     "next-redux-wrapper": "^7.0.0",
