--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,12 +70,12 @@
         "argsIgnorePattern": "^_"
       }
     ],
-    //    "no-console": [
-    //      2,
-    //      {
-    //        "allow": ["warn", "error"]
-    //      }
-    //    ],
+        "no-console": [
+          2,
+          {
+            "allow": ["warn", "error"]
+          }
+        ],
     "import/order": [
       "error",
       {
