--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@googlemaps/js-api-loader": "^1.12.3",
     "@juggle/resize-observer": "^3.3.1",
     "@moxy/next-router-scroll": "^2.2.0",
+    "@react-hook/resize-observer": "^1.2.4",
     "@reduxjs/toolkit": "^1.5.1",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "^0.3.2",
@@ -45,6 +46,7 @@
     "contentful": "^8.3.6",
     "contentful-management": "^7.22.2",
     "cookies-next": "^2.0.3",
+    "dompurify": "^2.3.3",
     "dotenv": "^10.0.0",
     "graphql": "^15.6.0",
     "gsap": "./gsap-bonus.tgz",
@@ -78,6 +80,7 @@
     "@next/eslint-plugin-next": "^11.1.2",
     "@testing-library/react": "^11.2.6",
     "@types/body-scroll-lock": "^3.1.0",
+    "@types/dompurify": "^2.3.1",
     "@types/facebook-pixel": "^0.0.24",
     "@types/google-map-react": "^2.1.3",
     "@types/gtag.js": "^0.0.7",
